added styling to table

--- a/normal.html
+++ b/normal.html
@@ -54,6 +54,7 @@
 	font-family: Tahoma, sans-serif;
 }
 
+    .box-table-a{font-family:"Lucida Sans Unicode", "Lucida Grande", Sans-Serif;font-size:12px;width:230px;text-align:left;border-collapse:collapse;margin:5px;}.box-table-a th{font-size:13px;font-weight:normal;background:#b9c9fe;border-top:4px solid #aabcfe;border-bottom:1px solid #fff;color:#039;padding:8px;}.box-table-a td{background:#e8edff;border-bottom:1px solid #fff;color:#669;border-top:1px solid transparent;padding:8px;}.box-table-a tr:hover td{background:#d0dafd;color:#339;}
 
 
   </style>
@@ -360,7 +361,7 @@ $(function() {
 <!--      <input type="radio" name="units" value="m" checked onclick="setUnits();calcPage();"> Meters<br>-->
       <input type="button" value="Reset Cross Section" onClick="resetXS('section'); updateChart();">
 
-      <table class='testgrid'>
+      <table class='box-table-a'>
 	    <tr><td>Flow Area:</td><td> <span id='area'></span></td><tr>
       	<tr><td>Wetted Perimeter:</td><td> <span id='wetP'></span></td><tr>
       	<tr><td>Max Depth:</td><td> <span id='depth'></span> (<span class="lengthUnits"></span>)</td><tr>
